--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,42 @@
-# Compiled class file
-*.class
+### IntelliJ IDEA ###
+.idea
+!.idea/
+.idea/*
+!.idea/runConfigurations/
+*.iml
+*.ipr
+*.iws
+/out/
+**/out/**
 
-# Log file
-*.log
+### Maven ###
+*.log*
+.DS_Store
+target/
+/.m2/
+build/
+.gradle/
 
-# BlueJ files
-*.ctxt
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+### VS Code ###
+.vscode/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# run ./gradle process-resources or ./mvnw process-resources
+ui/Dockerfile
+**/resources/logback.xml
